<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="Profile" />

        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/matches"
            android:title="Matches" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="Settings" />
    </group>
</menu>
